--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,10 @@ jobs:
           pip install uv
           uv venv
           uv pip install -r requirements-dev.lock
+      - name: Run tests
+        run: |
+          source .venv/bin/activate
+          pytest
   build:
     runs-on: ubuntu-latest
     steps:
