--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           source .venv/bin/activate
           pytest
+          pytest functests
   build:
     runs-on: ubuntu-latest
     steps:
