--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
 ]
 readme = "README.rst"
 requires-python = ">= 3.9"
-license = {file = "LICENSE"}
+license-files = { paths = ["LICENSE"] }
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Framework :: Sphinx",
@@ -34,6 +34,10 @@ dynamic = ["version"]
 sphinx = [
     "sphinx",
 ]
+
+[project.urls]
+Home = "https://github.com/attakei/rst-multi-ref"
+Repository = "https://github.com/attakei/rst-multi-ref"
 
 [build-system]
 requires = ["hatchling"]
