--- a/doc/Makefile
+++ b/doc/Makefile
@@ -18,6 +18,9 @@ apidoc:
 	rm -rf api
 	sphinx-apidoc -f -e -T -o api/ ../src/rst_multi_refs
 
+develop:
+	sphinx-autobuild -b dirhtml $(SOURCEDIR) $(BUILDDIR)/dirhtml $(O)
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
