--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ testpaths = ["tests"]
 [tool.rye]
 managed = true
 dev-dependencies = [
+    "jinja2~=3.1.0",
     "pytest~=8.0.1",
     "sphinx~=7.2.0",
     "sphinx-autobuild~=2024.2.4",
