--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ testpaths = ["tests"]
 [tool.rye]
 managed = true
 dev-dependencies = [
+    "furo~=2024.1.29",
     "jinja2~=3.1.0",
     "pytest~=8.0.1",
     "sphinx~=7.2.0",
